# timetracker

./: Cargo.toml  default_config.toml  state_sample
assets/: fish_completions.fish
src/: activity.rs  activity_commands.rs  activity_entry.rs  activity_range.rs  cli.rs  config.rs  entry.rs  entry_commands.rs  files.rs  format_string.rs  generate.rs  main.rs  opt.rs  printable.rs  trackable.rs
src/activity_entry/: activity_groupings.rs
src/entry_commands/: generate.rs  show.rs
src/opt/: activity_quantity.rs
