[package]
name = "timetrack"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.42"
clap = { version = "4.5.53", features = ["derive"] }
color-eyre = "0.6.5"
nom = "8.0.0"
owo-colors = { version = "4.2.3", features = ["supports-colors"] }
rev_lines = "0.3.0"
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.8"
